# learning-llms-from-scratch

./: .gitignore  README.md  pyproject.toml
notebooks/2026-02-08-simpe-pytorch-stuff/: 01-test-out-pytorch.py
notebooks/2026-02-08-simple-pytorch-stuff/: 01-test-out-pytorch.py
src/learning_llms_from_scratch/: __init__.py
