[project]
name = "learning-llms-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jiří Filip", email = "j.f.ilip@seznam.cz" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.3",
    "jupytext>=1.19.1",
]

[project.scripts]
learning-llms-from-scratch = "learning_llms_from_scratch:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
