[project]
name = "learning-llms-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jiří Filip", email = "j.f.ilip@seznam.cz" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.3",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
]

[project.scripts]
learning-llms-from-scratch = "learning_llms_from_scratch:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
